apps/production/container-registry/proxy/ui/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: container-registry-proxy-ui
spec:
  selector:
    app: container-registry-proxy-ui
  ports:
    - name: http
      targetPort: 80
      port: 8080
