apps/production/container-registry/proxy/ui/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: container-registry-proxy-ui

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`registry-proxy.local.hejsan.xyz`) && PathPrefix(`/ui`)
      kind: Rule
      services:
        - name: container-registry-proxy-ui
          port: http
      middlewares:
        - name: strip-ui-prefix
  tls:
    secretName: local-hejsan-xyz-tls

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-ui-prefix
spec:
  stripPrefix:
    prefixes:
      - "/ui"
